remove usage of fieldsNoId
related to https://github.com/jhipster/generator-jhipster/pull/13347

--- a/generators/entity/templates/entity-detail-screen.js.ejs
+++ b/generators/entity/templates/entity-detail-screen.js.ejs
@@ -43,7 +43,7 @@ function <%= context.entityNameCapitalized %>EntityDetailScreen(props) {
     <ScrollView style={styles.container} testID="<%= context.entityInstance %>DetailScrollView">
       <Text style={styles.label}>Id:</Text>
       <Text>{props.<%= context.entityInstance %>.id}</Text>
-      <%_ context.fieldsNoId.forEach(function (field) { _%>
+      <%_ context.fields.filter(field => !field.id).forEach(function (field) { _%>
       {/* <%= field.fieldNameCapitalized %> Field */}
       <Text style={styles.label}><%= field.fieldNameCapitalized %>:</Text>
       <%_ if (field.fieldType === 'LocalDate') { _%>
