--- a/generators/entity/templates/entity-edit-screen.js.ejs
+++ b/generators/entity/templates/entity-edit-screen.js.ejs
@@ -23,7 +23,7 @@ import styles from './<%= context.entityFileName %>-entity-edit-screen-style'
 <%_ if (context.validation) { // start of validation if statement _%>
 // set up validation schema for the form
 const validationSchema = Yup.object().shape({
-  <%_ context.fieldsNoId.forEach((field) => { // start of fields loop
+  <%_ context.fields.filter(field => !field.id).forEach((field) => { // start of fields loop
   if (field.fieldValidate) {  // start of fieldValidate if statement_%>
   <%= field.fieldName %>: Yup.<%= context.getFieldValidateType(field.fieldType) %>()
     <%_field.fieldValidateRules.forEach((rule, index) => { // start of fieldValidateRules loop _%>
@@ -47,7 +47,7 @@ const validationSchema = Yup.object().shape({
 });
 <%_ } // end of validation if statement _%>
 
-<%_ context.fieldsNoId.forEach((field) => {
+<%_ context.fields.filter(field => !field.id).forEach((field) => {
   if (field.fieldIsEnum) { _%>
 const <%= field.fieldType %> = [
 <%_
@@ -124,7 +124,7 @@ const onSubmit = (data) => update<%= context.entityNameCapitalized %>(formValueT
   }
 
   const formRef = createRef();
-  <%_ context.fieldsNoId.forEach((field, index) => { _%>
+  <%_ context.fields.filter(field => !field.id).forEach((field, index) => { _%>
   const <%= field.fieldName %>Ref = createRef();
     <%_ if (field.fieldType === 'byte[]' && field.fieldTypeBlobContent !== 'text') { _%>
   const <%= field.fieldName %>ContentTypeRef = createRef();
@@ -145,11 +145,11 @@ const onSubmit = (data) => update<%= context.entityNameCapitalized %>(formValueT
         {!!error && <Text style={styles.errorText}>{error}</Text>}
         {formValue && (
           <Form initialValues={formValue} <%_ if (context.validation) { _%>validationSchema={validationSchema} <%_ } _%>onSubmit={onSubmit} ref={formRef}>
-          <%_ context.fieldsNoId.forEach((field, index) => { _%>
+          <%_ context.fields.filter(field => !field.id).forEach((field, index) => { _%>
           <%_
             let nextFieldName = null
-            if (index !== context.fieldsNoId.length - 1) {
-              nextFieldName = context.fieldsNoId[index + 1].fieldName
+            if (index !== context.fields.filter(field => !field.id).length - 1) {
+              nextFieldName = context.fields.filter(field => !field.id)[index + 1].fieldName
             }
             const formField = context.getEntityFormField(field, nextFieldName, context.relationships.filter(relation => relation.ownerSide).length);
           _%>
@@ -190,7 +190,7 @@ const entityToFormValue = (value) => {
   }
   return {
     id: value.id || null,
-    <%_ context.fieldsNoId.forEach((field, index) => { _%>
+    <%_ context.fields.filter(field => !field.id).forEach((field, index) => { _%>
     <%= field.fieldName %>: value.<%= field.fieldName %> || null,
       <%_  if (field.fieldType === 'byte[]' && field.fieldTypeBlobContent !== 'text') { _%>
     <%= field.fieldName %>ContentType: value.<%= field.fieldName %>ContentType || null,
@@ -216,7 +216,7 @@ const entityToFormValue = (value) => {
 const formValueToEntity = (value) => {
   const entity = {
     id: value.id || null,
-    <%_ context.fieldsNoId.forEach((field, index) => { _%>
+    <%_ context.fields.filter(field => !field.id).forEach((field, index) => { _%>
       <%_ if (field.fieldType === 'Boolean') { _%>
     <%= field.fieldName %>: value.<%= field.fieldName %> === null ? false : Boolean(value.<%= field.fieldName %>),
       <%_ } else { _%>
