--- a/generators/app/templates/test/spec/shared/sagas/startup.saga.spec.js.ejs
+++ b/generators/app/templates/test/spec/shared/sagas/startup.saga.spec.js.ejs
@@ -1,7 +1,9 @@
 import { put } from 'redux-saga/effects'
 
 import { startup } from '../../../../app/shared/sagas/startup.saga'
+<%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
 import LoginActions from '../../../../app/modules/login/login.reducer'
+<%_ } _%>
 import AccountActions from '../../../../app/shared/reducers/account.reducer'
 import AppStateActions from '../../../../app/shared/reducers/app-state.reducer'
 
@@ -9,7 +11,9 @@ const stepper = (fn) => (mock) => fn.next(mock).value
 
 test('calls the right actions on startup', () => {
   const step = stepper(startup())
+  <%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
   expect(step()).toEqual(put(LoginActions.loginLoad()))
+  <%_ } _%>
   expect(step()).toEqual(put(AccountActions.accountRequest()))
   expect(step()).toEqual(put(AppStateActions.setRehydrationComplete()))
 })
@@ -17,7 +21,9 @@ test('calls the right actions on startup', () => {
 test('calls the right actions when console.tron is null', () => {
   console.tron = null
   const step = stepper(startup())
+  <%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
   expect(step()).toEqual(put(LoginActions.loginLoad()))
+  <%_ } _%>
   expect(step()).toEqual(put(AccountActions.accountRequest()))
   expect(step()).toEqual(put(AppStateActions.setRehydrationComplete()))
 })
