--- a/generators/app/templates/app/shared/reducers/create-store.js.ejs
+++ b/generators/app/templates/app/shared/reducers/create-store.js.ejs
@@ -1,10 +1,11 @@
-import { createStore, applyMiddleware } from 'redux'
+import { createStore, applyMiddleware, compose } from 'redux'
 import createSagaMiddleware from 'redux-saga'
-import { composeWithDevTools } from 'redux-devtools-extension/developmentOnly';
+import Reactotron from 'reactotron-react-native'
 
 import RehydrationServices from '../services/rehydration.service'
 import ReduxPersist from '../../config/redux-persist'
-<%_ if (context.websocket) { _%>
+import Config from '../../config/debug-config'
+<%_ if (props.websockets) { _%>
 import WebsocketService from '../websockets/websocket.service'
 <%_ } _%>
 // creates the store
@@ -16,10 +17,10 @@ export default (rootReducer, rootSaga) => {
 
   /* ------------- Saga Middleware ------------- */
 
-  const sagaMonitor = null;
+  const sagaMonitor = Config.useReactotron ? console.tron.createSagaMonitor() : null
   const sagaMiddleware = createSagaMiddleware({ sagaMonitor })
   middleware.push(sagaMiddleware)
-  <%_ if (context.websocket) { _%>
+  <%_ if (props.websockets) { _%>
   const wsSagaMiddleware = createSagaMiddleware(WebsocketService.websocketSagas)
   middleware.push(wsSagaMiddleware)
   <%_ } _%>
@@ -28,7 +29,11 @@ export default (rootReducer, rootSaga) => {
 
   enhancers.push(applyMiddleware(...middleware))
 
-  const store = createStore(rootReducer, composeWithDevTools(...enhancers));
+  // if Reactotron is enabled (default for __DEV__), we'll create the store through Reactotron
+  if (Config.useReactotron) {
+    enhancers.push(Reactotron.createEnhancer())
+  }
+  const store = createStore(rootReducer, compose(...enhancers))
 
   // configure persistStore and check reducer version number
   if (ReduxPersist.active) {
@@ -37,14 +42,14 @@ export default (rootReducer, rootSaga) => {
 
   // kick off root saga
   let sagasManager = sagaMiddleware.run(rootSaga)
-  <%_ if (context.websocket) { _%>
+  <%_ if (props.websockets) { _%>
   let websocketSagaManager = wsSagaMiddleware.run(WebsocketService.websocketSagas)
   <%_ } _%>
 
   return {
     store,
     sagasManager,
-    <%_ if (context.websocket) { _%>
+    <%_ if (props.websockets) { _%>
     websocketSagaManager,
     <%_ } _%>
     sagaMiddleware
