--- a/generators/app/templates/app/shared/services/api.js.ejs
+++ b/generators/app/templates/app/shared/services/api.js.ejs
@@ -1,5 +1,8 @@
 // a library to wrap and simplify api calls
 import apisauce from 'apisauce'
+<%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
+import CookieManager from '@react-native-community/cookies'
+<%_ } _%>
 
 import AppConfig from '../../config/app-config'
 
@@ -21,6 +24,15 @@ const create = (baseURL = AppConfig.apiUrl) => {
     // 10 second timeout...
     timeout: 10000
   })
+  <%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
+  api.addAsyncRequestTransform(request => async (request) => {
+    const cookies = await CookieManager.get(baseURL)
+    if (cookies['XSRF-TOKEN'] && cookies['XSRF-TOKEN'].value) {
+      request.headers['X-XSRF-TOKEN'] = cookies['XSRF-TOKEN'].value
+    }
+    return request
+  })
+  <%_ } _%>
 
   // ------
   // STEP 2
@@ -36,27 +48,35 @@ const create = (baseURL = AppConfig.apiUrl) => {
   // Since we can't hide from that, we embrace it by getting out of the
   // way at this level.
   //
+  <%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
   const setAuthToken = (userAuth) => api.setHeader('Authorization', 'Bearer ' + userAuth)
   const removeAuthToken = () => api.deleteHeader('Authorization')
-  <%_ if (context.authenticationType === 'oauth2') { _%>
+  <%_ } _%>
+  <%_ if (props.authType === 'oauth2') { _%>
   const getOauthInfo = () => api.get('api/auth-info')
   const getOauthIssuerInfo = (issuerUrl) => api.get(`${issuerUrl}/.well-known/openid-configuration`)
-  <%_ } else if (context.authenticationType === 'jwt') { _%>
+  <%_ } else if (props.authType === 'session') { _%>
+  const login = (userAuth) => api.post('api/authentication', userAuth, { headers: { 'Content-Type': 'application/x-www-form-urlencoded', 'Accept': 'application/json, text/plain, */*' } })
+  const logout = () => api.post('api/logout')
+  <%_ } else if (props.authType === 'jwt') { _%>
   const login = (userAuth) => api.post('api/authenticate', userAuth)
+  <%_ } else if (props.authType === 'uaa') { _%>
+  const login = (userAuth) => api.post('auth/login', userAuth)
+  const logout = () => api.post('auth/logout')
   <%_ } _%>
-  const register = (user) => api.post('api/register', user)
-  const forgotPassword = (data) => api.post('api/account/reset-password/init', data, { headers: { 'Content-Type': 'text/plain', 'Accept': 'application/json, text/plain, */*' } })
+  const register = (user) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/register', user)
+  const forgotPassword = (data) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account/reset-password/init', data, { headers: { 'Content-Type': 'text/plain', 'Accept': 'application/json, text/plain, */*' } })
 
-  const getAccount = () => api.get('api/account')
-  const updateAccount = (account) => api.post('api/account', account)
-  const changePassword = (currentPassword, newPassword) => api.post('api/account/change-password', { currentPassword, newPassword }, { headers: { 'Content-Type': 'application/json', 'Accept': 'application/json, text/plain, */*' } })
+  const getAccount = () => api.get(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account')
+  const updateAccount = (account) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account', account)
+  const changePassword = (currentPassword, newPassword) => api.post(<% if (props.authType === 'uaa') { %>AppConfig.uaaBaseUrl + <% } %>'api/account/change-password', { currentPassword, newPassword }, { headers: { 'Content-Type': 'application/json', 'Accept': 'application/json, text/plain, */*' } })
 
   const getUser = (userId) => api.get('api/users/' + userId)
   const getUsers = (options) => api.get('api/users', options)
   const createUser = (user) => api.post('api/users', user)
   const updateUser = (user) => api.put('api/users', user)
   const deleteUser = (userId) => api.delete('api/users/' + userId)
-  // jhipster-react-native-api-method-needle
+  // ignite-jhipster-api-method-needle
 
   // ------
   // STEP 3
@@ -77,13 +97,17 @@ const create = (baseURL = AppConfig.apiUrl) => {
     getUsers,
     getUser,
     deleteUser,
-    // jhipster-react-native-api-export-needle
+    // ignite-jhipster-api-export-needle
+    <%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
+    logout,
+    <%_ } else { _%>
     setAuthToken,
     removeAuthToken,
-    <%_ if (context.authenticationType === 'oauth2') { _%>
+    <%_ } _%>
+    <%_ if (props.authType === 'oauth2') { _%>
     getOauthInfo,
     getOauthIssuerInfo,
-    <%_ } else if (context.authenticationType === 'jwt') { _%>
+    <%_ } else { _%>
     login,
     <%_ } _%>
     register,
