--- a/generators/app/templates/app/shared/services/fixture-api.js.ejs
+++ b/generators/app/templates/app/shared/services/fixture-api.js.ejs
@@ -2,7 +2,7 @@ export default {
   // Functions return fixtures
 
   // entity fixtures
-  // jhipster-react-native-api-fixture-needle
+  // ignite-jhipster-api-fixture-needle
 
   // user fixtures
   updateUser: (user) => {
@@ -29,15 +29,32 @@ export default {
     }
   },
   // auth fixtures
+  <%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
   setAuthToken: () => {
 
   },
   removeAuthToken: () => {
 
   },
-  <%_ if (context.authenticationType === 'jwt') { _%>
+  <%_ } _%>
+  <%_ if (props.authType === 'session' || props.authType === 'uaa') { _%>
+  logout: () => {
+    return {
+      ok: true
+    }
+  },
+  <%_ } _%>
+  <%_ if (props.authType !== 'oauth2') { _%>
   login: (authObj) => {
+    <%_ if (props.authType === 'session') { _%>
+      <%_ if (props.oldSessionAuthParameters) { _%>
+    if (authObj === 'j_username=user&j_password=user&remember-me=true') {
+      <%_ } else { _%>
+    if (authObj === 'username=user&password=user&remember-me=true') {
+      <%_ }_%>
+    <%_ } else if (props.authType === 'jwt' || props.authType === 'uaa') { _%>
     if (authObj.username === 'user' && authObj.password === 'user') {
+    <%_ } _%>
       return {
         ok: true,
         data: require('../fixtures/login.json')
@@ -50,7 +67,7 @@ export default {
       }
     }
   },
-  <%_ } else if (context.authenticationType === 'oauth2') { _%>
+  <%_ } else { _%>
   getOauthInfo: () => {
     return {
       ok: true,
