--- a/generators/app/templates/test/spec/modules/login/login.reducer.spec.js.ejs
+++ b/generators/app/templates/test/spec/modules/login/login.reducer.spec.js.ejs
@@ -18,6 +18,7 @@ test('failure', () => {
   expect(state.fetching).toBe(false)
   expect(state.error).toBe(69)
 })
+<%_ if (props.authType === 'jwt' || props.authType === 'oauth2') { _%>
 test('load login request', () => {
   const state = reducer(INITIAL_STATE, Actions.loginLoad())
   expect(state.loading).toBe(true)
@@ -27,6 +28,7 @@ test('load login success', () => {
   const state = reducer(INITIAL_STATE, Actions.loginLoadSuccess())
   expect(state.loading).toBe(false)
 })
+<%_ } _%>
 test('logout', () => {
   const loginState = reducer(INITIAL_STATE, Actions.loginSuccess({ id_token: 'hi' }))
   const state = reducer(loginState, Actions.logoutRequest())
